# Deep-VIsion-Language-Models-

./: README.md
Programming Assignments/PA1/: DDPM_MNIST_PA1_end_to_end.ipynb
Programming Assignments/PA2/: DVLM_PA2.html
Programming Assignments/PA2_1/code/: .gitignore  README.md  eval.py  pyproject.toml  run_ablations.py  train_rl.py  train_rm.py  train_sft.py
Programming Assignments/PA2_1/code/alignment/: __init__.py  advantages.py  dpo.py  grpo.py  kl.py  ppo.py  rlvr.py
Programming Assignments/PA2_1/code/configs/: default.yaml  dpo.yaml  grpo.yaml  ppo.yaml  rlvr.yaml  rm.yaml  sft.yaml
Programming Assignments/PA2_1/code/data/: __init__.py  collators.py  gsm8k.py  hh_rlhf.py  parsing.py
Programming Assignments/PA2_1/code/model/: __init__.py  generation.py  loading.py  logprobs.py  lora.py  reward_model.py  value_model.py
Programming Assignments/PA2_1/code/notebooks/: DVLM_PA2_1.ipynb  run_colab.ipynb
Programming Assignments/PA2_1/code/tools/: make_scripts_zip.py
Programming Assignments/PA2_1/code/utils/: __init__.py  config.py  io.py  logging_utils.py  memory.py  metrics.py  plotting.py  text.py
Programming Assignments/PA2_2/: README.md  eval.py  requirements.txt  run_colab.ipynb  setup.cfg  train_rl.py  train_rm.py  train_sft.py
Programming Assignments/PA2_2/alignment/: __init__.py  grpo.py  kl.py  ppo.py
Programming Assignments/PA2_2/configs/: dpo.yaml  ppo.yaml  rlvr.yaml  rm.yaml
Programming Assignments/PA2_2/data/: __init__.py  collators.py  (+1 more)
Programming Assignments/PA3/: PA3_Full_Implementation.ipynb  PA3_Full_Implementation_fixed.ipynb
(+87 files in other folders)
